--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<script src="/socket.io/socket.io.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <script src ="/socket.io/socket.io.js"> </script>
+</head>
+<body>
+    <script>
+        const socket = io();
+        socket.emit("firstConnection", "Hello socket Server!");
+    
+        socket.on("message", data => console.log(data));
+    </script>
+</body>
+</html>
